# cpporm

./: .gitignore  CMakeLists.txt  README.md  databoard.cpp  databoard.h  tablebase.h
mysql/: CMakeLists.txt  operatormysql.cpp  operatormysql.h
sqlBase/: sqlbase.h
sqlite/: CMakeLists.txt  operatorsqlite.cpp  operatorsqlite.h
test/: CMakeLists.txt  main.cpp  table.h
